--- a/src/Graph/graph.css
+++ b/src/Graph/graph.css
@@ -9,15 +9,20 @@
   flex: 1;
   user-select: none;
 }
-
-.links {
-  stroke: #61dafb;
-  stroke-width: 2;
+#markerPoly1 {
+  fill: hsl(192, 100%, 90%);
 }
-
+.links {
+  stroke: hsl(192, 100%, 70%);
+  stroke-width: 2;
+  marker-end: url(#arrow);
+}
+.hidden {
+  display: none;
+}
 .node {
   text-anchor: middle;
-  fill: #61dafb;
+  fill: hsl(192, 100%, 70%);
 }
 
 .controls {
@@ -57,8 +62,8 @@
     0 0px 13px 0 rgba(0, 0, 0, 0.3), inset 0 0 7px 2px rgba(0, 0, 0, 0.4);
 }
 .control-btn.active > svg {
-  fill: rgb(100, 225, 255);
+  fill: hsl(192, 100%, 70%);
 }
 .control-btn:focus {
-  outline-color: #61dafb;
+  outline-color: hsl(192, 100%, 70%);
 }
