--- a/src/Graph/graph.css
+++ b/src/Graph/graph.css
@@ -13,6 +13,7 @@
   fill: hsl(192, 100%, 90%);
 }
 .links {
+  fill: transparent;
   stroke: hsl(192, 100%, 70%);
   stroke-width: 2;
   marker-end: url(#arrow);
