--- a/src/Graph/graph.css
+++ b/src/Graph/graph.css
@@ -1,7 +1,8 @@
-.wrapper {
+.graph {
   display: flex;
+  height: 100%;
   flex-direction: column;
-  flex: 1;
+  flex-grow: 2;
 }
 
 #graphContainer {
@@ -9,18 +10,22 @@
   flex: 1;
   user-select: none;
 }
-#markerPoly1 {
+
+.marker {
   fill: hsl(192, 100%, 90%);
 }
+
 .links {
   fill: transparent;
   stroke: hsl(192, 100%, 70%);
   stroke-width: 2;
-  marker-end: url(#arrow);
+  marker-end: url(#end-arrow);
 }
+
 .hidden {
   display: none;
 }
+
 .node {
   text-anchor: middle;
   fill: hsl(192, 100%, 70%);
@@ -33,13 +38,14 @@
   position: relative;
   z-index: 2;
 }
+
 .control-btn {
   border: none;
   cursor: pointer;
   flex: 1; /* 282c34 */
   background-image: radial-gradient(
-    hsl(220, 13%, 20%) 0%,
-    hsl(220, 16%, 15%) 65%
+      hsl(220, 13%, 20%) 0%,
+      hsl(220, 16%, 15%) 65%
   );
   display: flex;
   height: 100%;
@@ -47,24 +53,28 @@
   justify-content: center;
   transition: 0.2s;
   box-shadow: inset 0 20px 4px -21px rgba(255, 255, 255, 0.4),
-    0 19px 13px 0 rgba(0, 0, 0, 0.3);
+  0 19px 13px 0 rgba(0, 0, 0, 0.3);
 }
+
 .control-btn > svg {
   fill: rgba(255, 255, 255, 0.8);
   width: 80%;
   height: 80%;
 }
+
 .control-btn.active {
   background-image: radial-gradient(
-    hsl(220, 15%, 15%) 0%,
-    hsl(220, 18%, 10%) 75%
+      hsl(220, 15%, 15%) 0%,
+      hsl(220, 18%, 10%) 75%
   );
   box-shadow: inset 0 16px 14px -21px transparent,
-    0 0px 13px 0 rgba(0, 0, 0, 0.3), inset 0 0 7px 2px rgba(0, 0, 0, 0.4);
+  0 0px 13px 0 rgba(0, 0, 0, 0.3), inset 0 0 7px 2px rgba(0, 0, 0, 0.4);
 }
+
 .control-btn.active > svg {
   fill: hsl(192, 100%, 70%);
 }
+
 .control-btn:focus {
   outline-color: hsl(192, 100%, 70%);
 }
