--- a/src/controllers/App/App.css
+++ b/src/controllers/App/App.css
@@ -1,56 +1,40 @@
 .App {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background-color: #282c34;
-    text-align: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  background-color: #282c34;
+  text-align: center;
 }
 
 .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 10vmin;
-    pointer-events: none;
+  animation: App-logo-spin infinite 20s linear;
+  height: 10vmin;
+  pointer-events: none;
 }
 @keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .App-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-    background-color: hsl(220, 13%, 15%);
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-.app-wrapper {
-    height: calc(100vh - 10vmin);
-    width: 100vw;
-    display: flex;
-    flex-direction: row;
-}
-
-.app-wrapper > .graph {
-    flex: 1.5;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: white;
+  background-color: hsl(220, 13%, 15%);
 }
 
 .wrapper {
-    background-color: hsl(220, 13%, 15%);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    flex: 1;
-    padding: 0 8px;
-    max-width: 35vw;
+  background-color: hsl(220, 13%, 15%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex: 1;
+  padding: 0 8px;
 }
