Updated matrix rendering

--- a/src/components/Matrix/matrix.css
+++ b/src/components/Matrix/matrix.css
@@ -1,35 +1,55 @@
-.Matrix {
-    font-family: "Courier Prime Sans", Consolas, "DejaVu Sans Mono", monospace;
-    overflow: auto;
+.matrix {
+  font-family: "FantasqueSansMono Nerd Font", "Courier Prime Sans", Consolas,
+    "DejaVu Sans Mono", monospace;
+  overflow: auto;
+}
+
+.matrix-content {
+  display: inline-block;
+}
+.matrix-content input {
+  width: 100%;
+  box-sizing: border-box;
+  text-align: center;
+  background: transparent;
+  border: 0;
+  border-top: 2px solid hsl(200, 50%, 60%);
+  color: hsl(200, 90%, 70%);
+}
+
+.matrix-wrapper {
+  display: flex;
+  width: fit-content;
+}
+.matrix-wrapper td,
+.matrix-wrapper th,
+.matrix-wrapper input {
+  width: 2rem;
+  min-height: 1.2rem;
+  flex: 1;
 }
 
 .matrix-table {
-    min-width: 100%;
-    empty-cells: show;
+  empty-cells: show;
 }
-
-.matrix-table td:nth-child(even) {
-    background-color: hsla(193, 75%, 75%, .6);
-    color: hsl(193, 25%, 18%);
+.matrix-table td:nth-child(even),
+.matrix-table th:nth-child(even) {
+  background-color: hsla(193, 75%, 75%, 0.6);
+  color: hsl(193, 25%, 18%);
 }
-
+.matrix-table > thead > tr {
+  border-bottom: 2px solid hsl(200, 50%, 60%);
+}
 .matrix-table tr {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-.matrix-table td,
+.matrix,
 .matrix-table th {
-    width: 1.5rem;
-    min-height: 1.2rem;
-    flex: 1;
-}
-
-.Matrix,
-.matrix-table th {
-    color: hsl(200, 90%, 70%);
+  color: hsl(200, 90%, 70%);
 }
 
 .matrix-table td {
-    color: hsl(192, 100%, 95%);
+  color: hsl(192, 100%, 95%);
 }
