--- a/src/controllers/Graph/graph.css
+++ b/src/controllers/Graph/graph.css
@@ -1,5 +1,6 @@
 .graph {
   display: flex;
+  background: hsl(220, 18%, 10%);
   height: 100%;
   flex-direction: column;
 }
@@ -7,6 +8,7 @@
 #graphContainer {
   display: flex;
   flex: 1;
+  border: 2px solid hsla(220, 15%, 30%, 0.6);
   user-select: none;
 }
 
@@ -44,33 +46,25 @@
 .control-btn {
   border: none;
   cursor: pointer;
-  flex: 1; /* 282c34 */
-  background-image: radial-gradient(
-    hsl(220, 13%, 20%) 0%,
-    hsl(220, 16%, 15%) 65%
-  );
+  flex: 1;
+  background: hsl(220, 15%, 15%);
   display: flex;
   height: 100%;
   align-items: center;
   justify-content: center;
-  transition: 0.2s;
-  box-shadow: inset 0 20px 4px -21px rgba(255, 255, 255, 0.4),
-    0 19px 13px 0 rgba(0, 0, 0, 0.3);
+  transition: all 0.2s;
 }
 
 .control-btn > svg {
-  fill: rgba(255, 255, 255, 0.8);
-  width: 80%;
-  height: 80%;
+  fill: hsl(220, 100%, 90%);
+  height: fit-content;
+  max-width: 80%;
+  max-height: 80%;
 }
 
-.control-btn.active {
-  background-image: radial-gradient(
-    hsl(220, 15%, 15%) 0%,
-    hsl(220, 18%, 10%) 75%
-  );
-  box-shadow: inset 0 16px 14px -21px transparent,
-    0 0px 13px 0 rgba(0, 0, 0, 0.3), inset 0 0 7px 2px rgba(0, 0, 0, 0.4);
+.control-btn:hover {
+  transition: background 0.25s ease-in;
+  background: hsl(220, 18%, 10%);
 }
 
 .control-btn.active > svg {
