Added GoogleSans font

--- a/src/components/Matrix/matrix.css
+++ b/src/components/Matrix/matrix.css
@@ -1,5 +1,5 @@
 .matrix {
-  font-family: "FantasqueSansMono Nerd Font", "Courier Prime Sans", Consolas,
+  font-family: "Google Sans", "FantasqueSansMono Nerd Font", Consolas,
     "DejaVu Sans Mono", monospace;
   overflow: auto;
 }
