--- a/src/controllers/App/App.css
+++ b/src/controllers/App/App.css
@@ -2,7 +2,7 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  background-color: #282c34;
+  background-color: hsl(220, 13%, 18%);
   text-align: center;
 }
 
