--- a/src/controllers/Graph/graph.css
+++ b/src/controllers/Graph/graph.css
@@ -47,7 +47,7 @@
   border: none;
   cursor: pointer;
   flex: 1;
-  background: hsl(220, 15%, 15%);
+  background-color: hsl(220, 13%, 15%);
   display: flex;
   height: 100%;
   align-items: center;
